# cyclops

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  core.py  cyclops.py  cyclops_email.py  pyproject.toml  requirements.txt  settings.py  tox.ini
.github/workflows/: ci.yaml
cyclops/: alert.py  cyclops.py  email.py  requests_retry.py  settings.py  slack.py
cyclops/tests/: test_cyclops.py
docker_root/etc/services.d/cyclops/: run
