[tool.poetry]
name = "cyclops"
version = "0.1.0"
description = "Tool to ensure that spreedly payment gateways haven't been compromised"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
arrow = "^1.2.3"
responses = "^0.21.0"
sentry-sdk = "^1.9.8"
azure-keyvault-secrets = "^4.5.1"
azure-identity = "^1.10.0"

[tool.poetry.group.dev.dependencies]
black = "21.9b0"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
mypy = "^0.971"
ptpython = "^3.0.20"
xenon = "^0.9.0"
regex = "<2021.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
